# fximu_firmware

./: CMakeLists.txt  README.md  package.xml
3d printed box/: ScatolaIMU.3MF
complementary/: CMakeLists.txt  complementary_filter.cpp  complementary_filter.h  fximu_complementary.cpp  fximu_complementary.h  parameters.h  startup_gcc.c
include/: common.h  fxas21002c.c  fxas21002c.h  fxas21002c_proc.h  fxas21002c_tiva.c  fxos8700cq.c  fxos8700cq.h  fxos8700cq_proc.h  fxos8700cq_tiva.c
